--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
     "@aws-amplify/ui-react": "^5.0.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@mui/material": "^5.13.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
