--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -7,7 +7,11 @@
     "@aws-amplify/ui-react": "^5.0.2",
     "@aws-sdk/client-lex-runtime-service": "^3.363.0",
     "@aws-sdk/client-lex-runtime-v2": "^3.363.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@mui/icons-material": "^5.13.7",
+    "@mui/material": "^5.13.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
