--- a/Cloud-Functions/functions/package.json
+++ b/Cloud-Functions/functions/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^10.0.0",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "firebase-tools": "^12.4.3"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
