--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -15,6 +15,7 @@
     "amazon-cognito-identity-js": "^6.3.1",
     "antd": "^5.6.2",
     "aws-amplify": "^5.3.1",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
