--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -18,9 +18,11 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.7.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
