--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.6.2",
     "aws-amplify": "^5.3.1",
     "aws-sdk": "^2.1413.0",
+    "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-chatbot-kit": "^2.1.2",
