--- a/Cloud-Functions/functions/package.json
+++ b/Cloud-Functions/functions/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^10.1.0",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1"
   },
