--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -33,6 +33,8 @@
     "react-scripts": "5.0.1",
     "react-simple-chatbot": "^0.6.1",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.7.2",
+    "socket.io-client": "^4.7.1",
     "styled-components": "^6.0.3",
     "sweetalert2": "^11.7.16",
     "web-vitals": "^2.1.4"
