--- a/Cloud-Functions/functions/package.json
+++ b/Cloud-Functions/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@google-cloud/language": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
