--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-chatbot-kit": "^2.1.2",
     "react-dom": "^18.2.0",
+    "react-lazyload": "^3.2.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-simple-chatbot": "^0.6.1",
