--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-chatbot-kit": "^2.1.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-simple-chatbot": "^0.6.1",
